<resources>
    <string name="app_name">Prieto-FinanceX</string>
    <string name="company_logo">Company Logo</string>
    <string name="welcome_to_financex">Welcome to FinanceX</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="no_account">No Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create your Account</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_email_to_reset">Enter your Email address to reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="verify_email">Verify Email</string>
    <string name="go_back">Go Back</string>
    <string name="verify_your_email">Verify your Email</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="dashboard">Dashboard</string>
    <string name="insights">Insights</string>
    <string name="add">Add</string>
    <string name="wallet">Wallet</string>
    <string name="account">Account</string>
    <string name="back">Back</string>
    <string name="manage">Manage</string>
    <string name="current_budget">Current Budget</string>
    <string name="back_button">Back Button</string>
    <string name="category">Category</string>
    <string name="logo">LOGO</string>
    <string name="your_categories">Your Categories</string>
    <string name="category_name">Category Name</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="category_description_et">Enter Category Description</string>
    <string name="submit">Submit</string>
    <string name="expense">Expense</string>
    <string name="image">Image</string>
    <string name="expense_name_tv">Expense Name</string>
    <string name="expense_name">Enter Expense Name</string>
    <string name="add_category_first">Add Category First</string>
    <string name="amount">Amount:</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="expense_desc_tv">Expense Description</string>
    <string name="expense_desc">Enter Expense Description</string>
    <string name="budget">Budget</string>
    <string name="report_generation">Generation Report</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="settings_logo">Settings Logo</string>
    <string name="settings">Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete">Delete</string>
    <string name="item_logo">Item Logo</string>
    <string name="item_name">Item Name</string>
    <string name="expense_total_amount">Expense Total Amount</string>
    <string name="category_name_tv">Category Name</string>
    <string name="edit">Edit</string>
    <string name="fill_both_fields">All fields are required.</string>
    <string name="sqlite_save_failed">SQLite save failed.</string>
    <string name="verification_email_failed">Failed to send verification email.</string>
    <string name="registration_failed">Registration failed: %1$s</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="logout_positive_button">Yes</string>
    <string name="logout_negative_button">No</string>
    <string name="menu_plan">Budget</string>
    <string name="menu_spending">Expense</string>
    <string name="menu_labels">Category</string>
    <string name="enter_email">Please enter your email address.</string>
    <string name="error_unknown">Unknown error</string>
    <string name="reset_failed">Failed to send reset link: %1$s</string>
    <string name="reset_link_sent">Reset link sent to %1$s</string>
    <string name="user_not_logged_in">User not logged in</string>
    <string name="category_saved">Category saved</string>
    <string name="category_save_failed">Failed to save category</string>
    <string name="user_not_found">User not found.</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="password_update_failed">Password update failed!</string>
    <string name="update_failed">Update failed.</string>
    <string name="email_password_required">Email and password required.</string>
    <string name="update_verification_failed">Failed to update verification status.</string>
    <string name="please_verify_email">Please verify your email before you proceed.</string>
    <string name="login_failed">Login failed: %1$s</string>
    <string name="invalid_budget_input">Please enter a valid amount and select a category</string>
    <string name="budget_saved_success">Budget plan has been saved</string>
    <string name="budget_saved_failed">Budget has failed to saved</string>
    <string name="fill_all_fields">Please fill all fields and select a category.</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="expense_saved">Expense has been saved</string>
    <string name="error_saving_expense">There\'s an error saving the expense</string>
    <string name="reauthentication_failed">Re-authentication has failed: %1$s</string>
    <string name="failed_to_save_image">Failed to save image</string>
    <string name="profile_updated">Profile has been Updated!</string>
    <string name="delete_account_title">Delete Account</string>
    <string name="delete_account_message">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="delete_account_positive_button">Delete</string>
    <string name="delete_account_negative_button">Cancel</string>
    <string name="account_deleted">Account deleted</string>
    <string name="home">Home</string>
    <string name="sign_out">Sign Out</string>
    <string name="database_error">Erron on the Database</string>
    <string name="email_already_used">Email has been already used!</string>
    <string name="weak_password">Password is too weak!</string>
    <string name="invalid_email">Invalid Email Address</string>
</resources>