<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:padding="24dp"
    tools:context=".ui.auth.LoginActivity">

    <ImageView
        android:id="@+id/fxLogo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/company_logo"
        android:src="@drawable/financexlogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/welcome_to_financex"
        android:textColor="@color/deep_blue"
        android:textSize="22sp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/fxLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/blue_rounded_box"
        android:hint="@string/email"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="12dp"
        android:padding="14dp"
        android:textColorHint="@color/deep_blue"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/dm_sans"
        app:layout_constraintTop_toBottomOf="@id/loginHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/blue_rounded_box"
        android:hint="@string/password"
        android:drawableStart="@drawable/pass_icon"
        android:drawablePadding="12dp"
        android:padding="14dp"
        android:textColorHint="@color/deep_blue"
        android:inputType="textPassword"
        android:fontFamily="@font/dm_sans"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/deep_blue"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/blue_rounded_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/dm_sans" />

        <TextView
            android:id="@+id/signUpTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/deep_blue"
            android:textSize="14sp"
            android:fontFamily="@font/dm_sans_medium"
            android:layout_marginStart="6dp"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
