<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".ui.auth.RegisterActivity">

    <ImageView
        android:id="@+id/fxlogo"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/company_logo"
        android:src="@drawable/financexlogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="24sp"
        android:textColor="@color/deep_blue"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/fxlogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_register_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="12dp"
                android:background="@drawable/blue_rounded_box"
                android:padding="14dp"
                android:singleLine="true"
                android:textColorHint="@color/deep_blue" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="12dp"
                android:background="@drawable/blue_rounded_box"
                android:padding="14dp"
                android:singleLine="true"
                android:textColorHint="@color/deep_blue" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/pass_icon"
                android:drawablePadding="12dp"
                android:inputType="textPassword"
                android:background="@drawable/blue_rounded_box"
                android:padding="14dp"
                android:singleLine="true"
                android:textColorHint="@color/deep_blue" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_rounded_button"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/card_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/registerBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textSize="14sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/signInHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/deep_blue"
            android:textSize="14sp"
            android:paddingStart="4dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_semi_bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
